# mathpiper

./: README  README.md  build.xml  nbbuild.xml
branches/: README
branches/mathpiper3/: build.xml
branches/mathpiper3/nbproject/: project.properties
branches/mathpiper3/resources/: MANIFEST.MF
branches/mathpiper_conspointer_branch/: build.xml
branches/mathpiper_conspointer_branch/nbproject/: project.properties
branches/mathpiper_javascript_branch/: build.xml  nbbuild.xml
branches/mathpiper_javascript_branch/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
branches/mathpiperide2/: build.xml
branches/mathpiperide4/: build.xml
branches/mpreduce_javascript_branch/: README  build.xml
branches/mpreduce_javascript_branch/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
experimental/MathPiperExercise/: .classpath  .project  AndroidManifest.xml
experimental/MathPiperExercise/assets/: arithmetic.mpw  remember_numbers.mpw
experimental/student_schedule/student_schedule/: .classpath  .project  build.xml
experimental/student_schedule/student_schedule_gwt/: .classpath  .project
lib/google_web_toolkit/: compile.sh  dot_classpath  module.gwt.xml  mpreduce.html
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/configs/: Test_Suite_with_t___p.properties
piper_refactor_netbeans/mathpiper_docs/nbproject/: build-impl.xml  genfiles.properties  project.xml
plugin_storage/jyacas_plugin/src/: services.xml
src/doc/: cas_educational_research_bibliography.bib  cas_educational_research_bibliography.bibtex.txt  cons_dump.odg  development_notes.txt  geogebra_applet_interface.java  testing_mathrider.txt  yacac_to_piper_function_name_changes.txt  yacas_to_mathpiper_function_name_changes.txt
src/doc/books/: exploring_stem_with_mathpiper.odt  introduction_to_programming_with_mathpiper.odt  mathpiper_design_and_implementation.odt
src/doc/mathpiper_docs_extraction/: function_categories_list.txt  text2html.mrw
src/doc/newbies_book/: exploring_stem_with_mathrider.odt  introduction_to_programming_with_mathrider_and_mathpiper.odt  mathrider_for_newbies.ltx  mathrider_for_newbies.odt  mathrider_for_newbies.tex  misc_ideas_for_newbies_book.odt  yacas_tutoral_older.txt  yacas_tutorial.txt
src/doc/yacas_misc/: todo_from_version_1.2.2.txt
src/examples/: ForEach.ys  Plot2D.ys  example_new.mpw  loop.ys  newbies_book_examples_1.mpw  notebook1.mrn  treeprocess_examples_1.mpw  worksheet_demo_1.mpw  worksheet_demo_1.mrw  worksheet_demo_1.mws
src/examples/experimental/: LongFactorForm.mrn  geogebra.mpw  histogram.mpw  juasm65.mws  p22_exercise.mrn  problems.mrw  problems.mws  taylorStringVersion.mpw  yacas_docs.mrn  yacas_functions.txt
src/jedit_core/: run.sh  unix_run.sh  win_run.bat  win_run.bat.with_jre  windows_run.bat
src/jedit_core/doc/: COPYING.PLUGINS.txt  README.txt  TODO.txt  welcome.html
src/jedit_core/keymaps/: jEdit_keys.props
src/jedit_core/modes/: asciidoc.xml  catalog  htaccess.xml  html.xml  markdown.xml  mathpiper.xml  mathpiperdocs.xml  mathpiperide.xml  mathpipertrace.xml  mathrider.xml  mathrideroutput.xml  piper.xml  s19.xml  uasm65.xml  vhdl.xml  wolfram.xml
src/jedit_core/settings/: history  killring.xml  perspective.xml  properties  recent.xml
src/jedit_core/startup/: change_icons.bsh  mathrider_startup.bsh  nicons.bsh
src/library_apps/geogebra/: build.xml
src/library_apps/hoteqn/: build.xml
src/library_apps/jlog/: build.xml
src/library_apps/jmathtex/: build.xml
src/library_apps/mathpiper/: MANIFEST.MF  build-before-profiler.xml  build.xml  mathpiper.properties  nbbuild.xml  test_index.txt
src/library_apps/mathpiper2/: build.xml
src/library_apps/mathpiper4/: .classpath  build.xml  untitled.txt
src/library_apps/mathpiperide/: build.xml
src/library_apps/mathrider/: build.xml
src/library_apps/mpreduce/: README  build.xml
src/library_apps/piper/: build.xml
src/library_apps/piper_b/: build.xml
src/library_apps/piper_me/: .classpath  README  build.xml  piper.sh
src/library_apps/piper_refactor/: build.xml
src/nbproject/: genfiles.properties  project.xml
src/org/mathpiper/: Version.java
src/plugins/3dxplormathj_plugin/: build.xml
src/plugins/beansheet_plugin/: build.xml
src/plugins/clojure_plugin/: build.xml
src/plugins/geogebra_plugin/: build.xml
src/plugins/hoteqn_plugin/: build.xml
src/plugins/jfreechart_plugin/: build.xml
src/plugins/jlog_plugin/: build.xml
src/plugins/jscicalc_plugin/: build.xml
src/plugins/jung_plugin/: build.xml
src/plugins/mathpiper_docs_plugin/: build.xml
src/plugins/mathpiper_plugin/: build.xml  nbbuild.xml
src/plugins/maxima_plugin/: build.xml
src/plugins/mpreduce_plugin/: build.xml
src/plugins/piper_docs_plugin/: build.xml
src/plugins/piper_me_plugin/: build.xml
src/plugins/piper_plugin/: build.xml
src/plugins/threedxplormathj_plugin/: build.xml
src/plugins/u6502_plugin/: build.xml
src/plugins/wolfram_plugin/: build.xml
src/scripts/startup/: mathpiperide_functions.bsh  mathrider_functions.bsh
storage/docs/: yacas_tutorial.txt
storage/jyacas_plugin/: build.xml
storage/jyacas_plugin/src/: dockables.xml  jyacas.props
storage/mpreduce/javacompiler/: Attribute_info.java  ByteCodes.java  CONSTANT_Fieldref_info.java  CONSTANT_NameAndType_info.java  Code_attribute.java  Cp_info.java  Exceptions_attribute.java  Method_info.java  SourceFile_attribute.java
storage/yacas_docs_plugin/: build.xml
tags/: README
trunk/: build.xml
trunk/src/: nbbuild.xml
trunk/src/library_apps/piper/scripts/: Makefile  Makefile.am  maketest
trunk/src/library_apps/piper/scripts/examples/: ABIN.pi  benchmark.pi  benchmark2.pi
trunk/src/library_apps/piper/scripts/multivar.rep/: code.pi
trunk/src/library_apps/piper/scripts/solve.rep/: code.pi
trunk/src/library_apps/piper/scripts/sums.rep/: om.pi
trunk/www/: index.html
wiki/: ArgumentChecking.wiki  GUIIdeas.wiki  JReduce.wiki  Main.wiki  PageName.wiki  UnusedMathPiperScripts.wiki
www/: index.html
(+17689 files in other folders)
